--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
   <header>
     <h1>Kanavahaku</h1>
-    <div class="header-right">
+    <button class="menu-toggle" id="menu-toggle" aria-label="Avaa valikko">
+      <i class="fa-solid fa-bars"></i>
+    </button>
+    <div class="header-right" id="header-menu">
       <div class="tabs">
         <div class="tab active" data-page="kanavahaku">Radioasemat</div>
         <div class="tab" data-page="televisio">Antennitelevisio</div>
